[package]
name = "ori-core"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Core library for Ori, a declarative UI framework for Rust."
keywords = ["gui", "graphics", "reactive", "native"]
categories = ["gui", "graphics"]
repository = "https://github.com/ChangeCaps/ori"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ori dependencies
ori-graphics = { path = "../ori-graphics", version = "0.1.0-alpha.1" }
ori-macro = { path = "../ori-macro", version = "0.1.0-alpha.1" }
ori-reactive = { path = "../ori-reactive", version = "0.1.0-alpha.1" }

# Other dependencies
deref-derive = "0.1"
parking_lot = "0.12"
seahash = "4.1"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

# Optional dependencies
isahc = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
image = ["ori-graphics/image"]
network = ["dep:isahc"]
serde = ["dep:serde"]
